Fix overflow

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -3,6 +3,7 @@
   display: grid;
   grid-template-columns: 1fr 2fr;
   padding-left: 120px;
+  overflow: hidden;
 }
 
 .hero > div:nth-child(1) {
